@@ -54,8 +54,10 @@ if ($result1 && (mysqli_num_rows($result1) == 1)) {
     <link rel="stylesheet" href="style/board18Map.css" />
     <script type="text/javascript" src="scripts/jquery.js">
     </script>
+    <!--
     <script type="text/javascript" src="scripts/jqueryMigrate.js">
     </script> 
+    -->
     <script type="text/javascript" src="scripts/board18com.js">
     </script>
     <script type="text/javascript" src="scripts/jquery.ui.position.js">
