@@ -1,3 +1,8 @@
+BOARD18 2.6.1 Release Notes
+ 
+Changes from 2.6.0 Release:
+Implemented fix for Issue 165 - Remove jQuery Migrate
+
 BOARD18 2.6.0 Release Notes
  
 Changes from 2.5.11 Release:
